[package]
authors = ["jw"]
edition = "2018"
name = "rust-experiments"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
petgraph = "0.5.1"
rand = "0.8.3"
rayon = "1.5.0"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
wikipedia = "0.3.4"
